--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -20,11 +20,12 @@ test:
         max_retries: 1
         retry_interval: 0
 
-production:
-  sessions:
-    default:
-      uri: <%= ENV['MONGOHQ_URL'] %>
-      database: fantasyhaus_production
-    options:
-      skip_version_check: true
-      safe: true
+<% if ENV['MONGOHQ_URL'] %>
+  production:
+    sessions:
+      default:
+        uri: <%= ENV['MONGOHQ_URL'] %>
+        options:
+          skip_version_check: true
+          safe: true
+<% end %>
